--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <title>KSJ | Link Tree</title>
   </head>
   <body>
-    
+    <header>
+      <div class="profile-picture">
+        <!-- profile picture of me -->
+      </div>
+      <div class="introduction">
+        <h2>Kevyn San Juan</h2>
+      </div>
+    </header>
+
+    <main>
+      <div class="links">
+        <button>
+          <i class="fa-brands fa-square-instagram"></i>
+          <p>instagram</p>
+        </button>
+        <button>
+          <i class="fa-brands fa-facebook"></i>
+          <p>Facebook</p>
+        </button>
+        <button>
+          <i class="fa-brands fa-linkedin"></i>
+          <p>LinkedIn</p>
+        </button>
+        <button>
+          <i class="fa-solid fa-address-card"></i>
+          <p>Portfolio</p>
+        </button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
