--- a/index.html
+++ b/index.html
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>KSJ | Link Tree</title>
   </head>
-  <body>
-    <header>
-      <div class="profile-picture">
-        <!-- profile picture of me -->
-      </div>
-      <div class="introduction">
-        <h2>Kevyn San Juan</h2>
-      </div>
-    </header>
 
+  <body>
+    <div class="background">
+      <img
+        src="https://images.unsplash.com/photo-1635776063328-153b13e3c245?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="bgImg"
+      />
+    </div>
+    <header>
+      <img src="public/profile.jpg" alt="a photo of me" />
+      <h1>Kevyn San Juan</h1>
+    </header>
     <main>
-      <div class="links">
-        <button>
-          <i class="fa-brands fa-square-instagram"></i>
-          <p>instagram</p>
-        </button>
-        <button>
-          <i class="fa-brands fa-facebook"></i>
-          <p>Facebook</p>
-        </button>
-        <button>
-          <i class="fa-brands fa-linkedin"></i>
-          <p>LinkedIn</p>
-        </button>
-        <button>
-          <i class="fa-solid fa-address-card"></i>
-          <p>Portfolio</p>
-        </button>
-        </div>
-      </div>
+      <a
+        href="https://www.facebook.com/kevyn.sanjuan"
+        target="_blank"
+        class="link"
+      >
+        <div class="linkBackground"></div>
+        <p>Facebook</p>
+        <i class="fa-brands fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/kebinsj/" target="_blank" class="link">
+        <div class="linkBackground"></div>
+        <p>Instagram</p>
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a
+        href="https://www.linkedin.com/in/kevyn-san-juan-716bb7264/"
+        target="_blank"
+        class="link"
+      >
+        <div class="linkBackground"></div>
+        <p>LinkedIn</p>
+        <i class="fa-brands fa-linkedin-in"></i>
+      </a>
+      <a href="#" target="_blank" class="link">
+        <div class="linkBackground"></div>
+        <p>Web Portfolio</p>
+        <i class="fa-regular fa-address-card"></i>
+      </a>
     </main>
   </body>
 </html>
