--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
         <p>LinkedIn</p>
         <i class="fa-brands fa-linkedin-in"></i>
       </a>
-      <a href="#" target="_blank" class="link">
+      <a
+        href="https://ksjportfoliov1.netlify.app/"
+        target="_blank"
+        class="link"
+      >
         <div class="linkBackground"></div>
         <p>Web Portfolio</p>
         <i class="fa-regular fa-address-card"></i>
